[package]
name = "CRUST"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "CRUST"
path = "src/main.rs"


[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.195", features = ["derive"] }
deadpool-postgres = "0.12.1"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
serde_json = "1.0.111"
futures-util = "0.3.30"
chrono = "0.4.31"
arc-swap = "1.6.0"
regex = "1.10.2"
lazy_static = "1.4.0"
rust_decimal =  { version = "1.33.1", features = ["db-tokio-postgres"] }
utoipa = { features = ["axum_extras"], version = "4.1.0" }
utoipa-swagger-ui = { features = ["axum"], version = "6.0.0" }
