[package]
name = "CRUST"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "CRUST"
path = "src/main.rs"


[dependencies]
axum = "0.7.7"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.210", features = ["derive"] }
deadpool-postgres = "0.14.0"
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
serde_json = "1.0.128"
futures-util = "0.3.31"
chrono = "0.4.38"
arc-swap = "1.7.1"
regex = "1.11.0"
lazy_static = "1.5.0"
rust_decimal =  { version = "1.36.0", features = ["db-tokio-postgres"] }
utoipa = { features = ["axum_extras"], version = "4.2.3" }
utoipa-swagger-ui = { features = ["axum"], version = "7.1.0" }
